--- a/doodle-front-end/src/app/toolbar/components/toolbar-component/toolbar.component.html
+++ b/doodle-front-end/src/app/toolbar/components/toolbar-component/toolbar.component.html
@@ -3,12 +3,12 @@
     <img src="assets/logo.png"/>
   </a>
   <span class="flex-expand"></span>
-  <button *ngIf="isLoggedIn" class="doodles-button" mat-raised-button (click)="navigate('/doodles')">
+  <button *ngIf="!!this.localStorageService.email" class="doodles-button" mat-raised-button (click)="navigate('/doodles')">
     <mat-icon>menu</mat-icon>
     My Doodles
   </button>
-  <a *ngIf="!isLoggedIn" class="login-ref" href="login">Log in</a>
-  <button *ngIf="!isLoggedIn" class="sign-up-button" mat-raised-button (click)="navigate('/registration')">
+  <a *ngIf="!this.localStorageService.email" class="login-ref" href="login">Log in</a>
+  <button *ngIf="!this.localStorageService.email" class="sign-up-button" mat-raised-button (click)="navigate('/registration')">
     Sign up
   </button>
   <button *ngIf="!isCreateDoodleOpened" class="create-doodle-button" mat-stroked-button
