--- a/doodle-front-end/src/app/homepage/components/homepage-component/homepage.component.html
+++ b/doodle-front-end/src/app/homepage/components/homepage-component/homepage.component.html
@@ -11,7 +11,7 @@
       <input class="form-input" matInput placeholder="Enter your Meeting ID if you have one!">
     </mat-form-field>
     <button class="submit-button" mat-raised-button>
-      Submit
+      View Meeting
       <mat-icon class="arrow">arrow_forward</mat-icon>
     </button>
   </div>
