--- a/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.html
+++ b/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.html
@@ -1,1 +1,15 @@
-<p>create-doodle works!</p>
+<div class="create-doodle-page-container">
+  <div class="form-container">
+    <h1>
+      Create group poll
+    </h1>
+    <form class="create-form">
+      <button
+        class ="submit-button"
+        type="submit"
+        mat-raised-button
+      >Create invite and continue</button>
+    </form>
+  </div>
+</div>
+
