--- a/doodle-front-end/src/app/registration/components/sign-up-page/sign-up-page.component.scss
+++ b/doodle-front-end/src/app/registration/components/sign-up-page/sign-up-page.component.scss
@@ -18,7 +18,7 @@
   border-radius: 10px;
   width: 700px;
   height: 530px;
-  padding: 30px 30px 30px 30px;
+  padding: 30px;
   margin: 20px;
   background-color: #F8F9FA;
 }
