--- a/doodle-front-end/src/app/view-doodles/components/view-doodles/view-doodles.component.html
+++ b/doodle-front-end/src/app/view-doodles/components/view-doodles/view-doodles.component.html
@@ -5,7 +5,8 @@
       <mat-card-content>
         {{meeting.title}}
         {{meeting.description}}
-        {{meeting.dateTime}}
+        {{meeting.dateTimeStart}}
+        {{meeting.dateTimeEnd}}
         {{meeting.location}}
       </mat-card-content>
     </mat-card>
