--- a/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.scss
+++ b/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.scss
@@ -1,8 +1,50 @@
+@use '@angular/material' as mat;
+
+@import '~@angular/material/theming';
+
+@include mat.core();
+
 .create-doodle-page-container {
   display: grid;
   justify-content: center;
 }
 
+.form-field {
+  padding: 10px;
+}
+
+
 .create-form {
   display: grid;
+}
+
+.form-container {
+  text-align: center;
+  border-radius: 10px;
+  width: 700px;
+  height: 700px;
+  padding: 30px;
+  margin: 30px;
+  background-color: #F8F9FA;
+}
+
+.submit-button {
+  height: 50px;
+  width: 100%;
+  justify-self: center;
+  border-radius: 20px;
+  font-size: 17px;
+  margin-top: 20px;
+}
+
+button.mat-raised-button {
+  background-color: map-get(mat.$deep-purple-palette, 500);
+  color: white;
+  font-weight: lighter;
+  border-radius: 30px;
+}
+
+button.mat-raised-button:hover:enabled {
+  background-color: map-get(mat.$deep-purple-palette, 100);
+  color: black;
 }
