finish create-doodle

--- a/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.html
+++ b/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.html
@@ -3,26 +3,7 @@
     <h1>
       Create group poll
     </h1>
-    <form class="create-form">
-      <mat-form-field class="form-field" appearance="fill">
-        <mat-label>Your name</mat-label>
-        <input [(ngModel)]="name" matInput placeholder="Enter full name" [formControl]="nameFormControl"
-               [errorStateMatcher]="matcher">
-        <mat-error *ngIf="nameFormControl.hasError('required')">
-          Name is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="form-field" appearance="fill">
-        <mat-label>Your email</mat-label>
-        <input [(ngModel)]="email" type="email" matInput placeholder="Enter valid email"
-               [formControl]="emailFormControl" [errorStateMatcher]="matcher">
-        <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-          Please enter a valid email address
-        </mat-error>
-        <mat-error *ngIf="emailFormControl.hasError('required')">
-          Email is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
+    <form class="create-form" (submit)="saveMeeting($event)">
       <mat-form-field class="form-field" appearance="fill">
         <mat-label>Title</mat-label>
         <input [(ngModel)]="title" class="form-input" matInput placeholder="Enter title"
@@ -33,17 +14,17 @@
       </mat-form-field>
       <mat-form-field class="form-field" appearance="fill">
         <mat-label>Description (optional)</mat-label>
-        <input class="form-input" matInput placeholder="Enter description">
+        <input [(ngModel)]="description" class="form-input" [ngModelOptions]="{standalone: true}" matInput placeholder="Enter description">
       </mat-form-field>
       <mat-form-field class="form-field" appearance="fill">
         <mat-label>Location (optional)</mat-label>
-        <input class="form-input" matInput placeholder="Enter location">
+        <input [(ngModel)]="location" class="form-input"  [ngModelOptions]="{standalone: true}" matInput placeholder="Enter location">
       </mat-form-field>
-      <mat-form-field class="form-field" appearance="fill">
+      <mat-form-field  class="form-field" appearance="fill">
         <mat-label>Enter a date range</mat-label>
-        <mat-date-range-input [rangePicker]="picker" [min]="nowDate">
-          <input matStartDate placeholder="Start date">
-          <input matEndDate placeholder="End date">
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker" [min]="nowDate">
+          <input formControlName="start"  matStartDate placeholder="Start date">
+          <input formControlName="end" matEndDate placeholder="End date">
         </mat-date-range-input>
         <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -51,7 +32,7 @@
       </mat-form-field>
       <button
         *ngIf="!loadingService.isLoading; else elseBlock"
-        [disabled]="emailFormControl.invalid || nameFormControl.invalid || titleFormControl.invalid"
+        [disabled]="titleFormControl.invalid"
         class ="submit-button"
         type="submit"
         mat-raised-button
