--- a/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.scss
+++ b/doodle-front-end/src/app/create-doodle/components/create-doodle/create-doodle.component.scss
@@ -22,8 +22,8 @@
   text-align: center;
   border-radius: 10px;
   width: 700px;
-  height: 700px;
-  padding: 30px;
+  height: 600px;
+  padding: 100px 30px 30px 30px;
   margin: 30px;
   background-color: #F8F9FA;
 }
