--- a/doodle-front-end/src/app/view-doodle/components/view-doodle/view-doodle.component.html
+++ b/doodle-front-end/src/app/view-doodle/components/view-doodle/view-doodle.component.html
@@ -27,5 +27,13 @@
         <strong>Owner: </strong> {{ meeting.owner }}
       </mat-card-subtitle>
     </mat-card>
+    <div>
+      <mat-card-title style="padding: 5px">Participants:</mat-card-title>
+      <mat-card *ngFor="let participant of participants" class="meeting-card">
+        <mat-card-subtitle>
+          <strong>User: </strong> {{ participant }}
+        </mat-card-subtitle>
+      </mat-card>
+    </div>
   </div>
 </ng-template>
