--- a/doodle-front-end/src/app/view-doodle/components/view-doodle/view-doodle.component.html
+++ b/doodle-front-end/src/app/view-doodle/components/view-doodle/view-doodle.component.html
@@ -9,13 +9,6 @@
         <strong>Title: </strong>{{ meeting.title }}</mat-card-subtitle
       >
       <mat-card-subtitle>
-        <strong>Start: </strong>{{ meeting.dateTimeStart }}</mat-card-subtitle
-      >
-
-      <mat-card-subtitle>
-        <strong>End: </strong>{{ meeting.dateTimeEnd }}</mat-card-subtitle
-      >
-      <mat-card-subtitle>
         <strong>Duration: </strong>{{ meeting.duration }} hours</mat-card-subtitle
       >
       <mat-card-subtitle class="purple-text">
@@ -32,23 +25,28 @@
 
 
     </mat-card>
-    <div class="votes">
-      <div *ngFor="let vote of this.times" class="vote">
-        <div>{{vote}} Votes: {{this.meeting.votes[vote].length}}</div>
-        <button [disabled]="this.meeting.votes[vote].includes(this.email)" mat-raised-button (click)="placeVote(vote)">Vote</button>
-        <div></div>
-        <div>
-          {{this.meeting.votes[vote].join(',')}}
+    <div class="participants">
+    <mat-card-title style="padding: 5px; text-align: center">Participants:</mat-card-title>
+    <mat-card *ngFor="let participant of participants" class="meeting-card">
+      <mat-card-subtitle>
+        <strong>User: </strong> {{ participant }}
+      </mat-card-subtitle>
+    </mat-card>
+  </div>
+    <div>
+      <div class="votes">
+        <div *ngFor="let vote of this.times" class="vote">
+          <div>{{vote}} Votes: {{this.meeting.votes[vote].length}}</div>
+          <button [disabled]="this.meeting.votes[vote].includes(this.email)" mat-raised-button (click)="placeVote(vote)">Vote</button>
+          <div></div>
+          <div>
+            {{this.meeting.votes[vote].join(',')}}
+          </div>
         </div>
       </div>
 
-    <div>
-      <mat-card-title style="padding: 5px">Participants:</mat-card-title>
-      <mat-card *ngFor="let participant of participants" class="meeting-card">
-        <mat-card-subtitle>
-          <strong>User: </strong> {{ participant }}
-        </mat-card-subtitle>
-      </mat-card>
+
     </div>
+
   </div>
 </ng-template>
