--- a/doodle-front-end/src/app/view-doodles/components/view-doodles/view-doodles.component.html
+++ b/doodle-front-end/src/app/view-doodles/components/view-doodles/view-doodles.component.html
@@ -1,13 +1,11 @@
 <div class="doodles-container">
   <h2  *ngIf="loadingService.isLoading; else elseBlock" class="loading-spinner">Loading...</h2>
   <ng-template #elseBlock>
-    <mat-card *ngFor="let meeting of meetings" class="meeting-card">
+    <mat-card *ngFor="let meeting of meetings" class="meeting-card" (click)="navigateTo(meeting.id)">
       <mat-card-content>
-        {{meeting.title}}
-        {{meeting.description}}
-        {{meeting.dateTimeStart}}
-        {{meeting.dateTimeEnd}}
-        {{meeting.location}}
+        <strong>{{meeting.title}}</strong>
+        <br>{{meeting.description}}
+        <br>{{meeting.location}}
       </mat-card-content>
     </mat-card>
   </ng-template>
